Sun May  1 12:31:55 EEST 2005 Pekka Riikonen <priikone@silcnet.org>

	* Added AD_ENABLE_DEPENDENCIES macro to enable Autodist
	  dependencies in makefiles.

	* Added -p option to Autodist.  It can be used to a process file
	  from the command line.

Sat Apr 30 17:49:05 EEST 2005 Pekka Riikonen <priikone@silcnet.org>

	* The 'noprocess' directive now works recursively with
	  directories.

Sat Apr 30 11:49:01 EEST 2005 Pekka Riikonen <priikone@silcnet.org>

	* Added better debug messages.

	* Added log file creation, autodist.log and makedist.log.

	* Fixed license-header to change license only during packaging,
	  not also during preparation.

	* Fixed .ad processing when the file was not processed, to
	  copy the original to new name.

	* Fixed 'include' when copying directories to root of the
	  distdir, and the destination directory already exist.

Fri Apr 29 16:48:16 EEST 2005 Pekka Riikonen <priikone@silcnet.org>

	* Fixed configure.ac creation when no fragments in use.

Thu Apr 28 11:44:59 EEST 2005 Pekka Riikonen <priikone@silcnet.org>

	* The '.in' suffix with source file suffixes expects source code 
	  format for the distdefs.

Sun Apr 24 21:11:49 EEST 2005 Pekka Riikonen <priikone@silcnet.org>

	* Fixed undefining to actually work.

	* The top distribution now takes precedence on defined
	  distdefs over inherited distributions, and can override
	  defined and undefined distdefs (previously it could only
	  undefine defined but not define specificly undefined :)).

	* Prettier distdef output with -s.

Sat Apr 23 12:49:09 EEST 2005 Pekka Riikonen <priikone@silcnet.org>

	* Autodist 1.2.1.

	* Fixed 'noprocess' sed script.

Fri Apr 22 20:23:06 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Autodist 1.2.

	* Various 'cat' optimizations.

	* More test cases in tests/.

	* No Autodist header for "other" '.ad' files as we don't know 
	  what the file contains.

	* No non-source distdef format processing for source files
	  anymore.
